<?xml version="1.0"?>
<package format="2">
  <name>hades_comm_handler</name>
  <version>0.0.0</version>
  <description>Package for HADES communications node</description>

  <maintainer email="nat.fallow@gmail.com">Nathaniel Fallow</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/natfallow/hades_comm_handler</url>


  <!-- DEPENDENCIES -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>theora_image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
